--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,5 @@ r_packages:
   - covr
 after_success:
   - Rscript -e 'library(covr); codecov()'
+notifications:
+  slack: rcollaborators:vsKVUWorGw2xKn9H0yhPIC36
