--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,7 @@ sudo: false
 cache: packages
 r_packages:
   - covr
+r_github_packages:
+  - jimhester/lintr
 after_success:
   - Rscript -e 'library(covr); codecov()'
