--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,8 @@ Imports:
     miniUI
 Suggests:
     testthat,
-    covr
+    covr,
+    lintr
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1.9000
