--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: exercism
 Type: Package
 Title: Interface to the Exercism API
-Version: 0.1.1
+Version: 0.1.1.9000
 Author: person("Jon", "Calder", email = "jonmcalder@gmail.com", role = c("aut", "cre"))
 Maintainer: Jon Calder <jonmcalder@gmail.com>
 Description: Exercism provides practice problems in over 30 programming 
@@ -25,3 +25,4 @@ Suggests:
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1.9000
+Roxygen: list(markdown = TRUE)
