Further :bug: fixes
- Update user agent in submit()
- More namespace fixes
- Add dependencies to Imports

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,10 @@ Imports:
     httr,
     jsonlite,
     shiny,
-    miniUI
+    miniUI,
+    R.utils,
+    assertthat,
+    rstudioapi
 Suggests:
     testthat,
     covr,
