--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(check_next_problem)
 export(exercism_addin)
 export(fetch_next)
 export(fetch_problem)
+export(open_exercise)
 export(set_api_key)
 export(set_exercism_path)
 export(skip_problem)
