Update linting, tests & docs
Move linting to after_success
Update tests to use open = FALSE
Generate docs to fix \dontrun

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,6 @@ r_github_packages:
   - jimhester/lintr
 after_success:
   - Rscript -e 'library(covr); codecov()'
+  - Rscript -e 'lintr::lint_package()'
 notifications:
   slack: rcollaborators:vsKVUWorGw2xKn9H0yhPIC36
