--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(exercism_addin)
 export(fetch_next)
 export(fetch_problem)
 export(open_exercise)
+export(run_tests)
 export(set_api_key)
 export(set_exercism_path)
 export(skip_problem)
