--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,9 @@ export(exercism_addin)
 export(fetch_next)
 export(fetch_problem)
 export(open_exercise)
-export(run_tests)
 export(set_api_key)
 export(set_exercism_path)
 export(skip_problem)
+export(start_testing)
 export(submit)
 export(track_status)
