enable R-specific auto-testing of solutions (#10)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,5 +11,6 @@ export(open_exercise)
 export(set_api_key)
 export(set_exercism_path)
 export(skip_problem)
+export(start_testing)
 export(submit)
 export(track_status)
